Add profile menu

--- a/src/app/layout/linkedin/linkedin.html
+++ b/src/app/layout/linkedin/linkedin.html
@@ -1,7 +1,7 @@
 <div id="getDetails">
   <span>
   <a href="#" ng-click="$ctrl.onClick()">Sync with Linkedin</a>
-  <md-icon md-svg-icon="{{$ctrl.linkedinIcon.icon}}"></md-icon>
+  <md-icon id="linkedInIcon" md-svg-icon="{{$ctrl.linkedinIcon.icon}}"></md-icon>
   </span>
   <form style="display: none" method="post"
         action="{{$ctrl.action}}">
