Added e2e tests for milestone create

--- a/src/app/profile/components/objectives-search/objectives-search-template.html
+++ b/src/app/profile/components/objectives-search/objectives-search-template.html
@@ -9,7 +9,7 @@
                    md-no-cache="true"
                    md-selected-item-change="$ctrl.selectedItemChange(obj)"
                    md-search-text="$ctrl.searchText"
-                   md-floating-label="Search objectives by title or tags"
+                   md-floating-label="Objective"
                    md-items="obj in $ctrl.getObjectives()"
                    md-menu-class="autocomplete-custom-template">
     <md-item-template>
