--- a/src/app/core/components/card-header/card-header-template.html
+++ b/src/app/core/components/card-header/card-header-template.html
@@ -33,7 +33,8 @@
       is-active="btn.isActive"
       on-click="btn.onClick(btn)"
       label="{{btn.label}}"
-      is-disabled="btn.isDisabled">
+      is-disabled="btn.isDisabled"
+      a-class="{{btn.aClass}}">
     </action-button>
 
     <md-button ng-if="$ctrl.showBtnDrag"
