--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -9,19 +9,19 @@
     <div layout="row" layout-align="end center" class="md-toolbar-tools">
       <div layout="row">
         <md-autocomplete
-          md-selected-item=""
-          md-search-text-change=""
-          md-search-text=""
-          md-selected-item-change=""
-          md-items=""
-          md-item-text=""
+          md-selected-item="$ctrl.selectedItem"
+          md-search-text-change="$ctrl.searchTextChange($ctrl.searchText)"
+          md-search-text="$ctrl.searchText"
+          md-selected-item-change="$ctrl.selectedItemChange(item)"
+          md-items="item in $ctrl.querySearch($ctrl.searchText)"
+          md-item-text="item.display"
           md-min-length="0"
           placeholder="Zoek gebruiker">
           <md-item-template>
-            <span md-highlight-text="" md-highlight-flags="^i">{{}}</span>
+            <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
           </md-item-template>
           <md-not-found>
-            "{{}}" levert geen resultaten op.
+            "{{$ctrl.searchText}}" levert geen resultaten op.
           </md-not-found>
         </md-autocomplete>
 
