--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -1,10 +1,8 @@
 <md-toolbar id="toolbar">
   <div layout="row">
-    <div class="logo"></div>
+    <div class="logo" layout-align="start center"></div>
     <div id="welcome" layout="row" layout-align="start center">
-      <span>
-        Welcome back!
-      </span>
+      <strong>JWorks&nbsp;360</strong>
     </div>
     <div layout="row" layout-align="end center" class="md-toolbar-tools">
       <div layout="row">
