--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -8,23 +8,7 @@
     </div>
     <div layout="row" layout-align="end center" class="md-toolbar-tools">
       <div layout="row">
-        <md-autocomplete
-          md-selected-item="$ctrl.selectedItem"
-          md-search-text-change="$ctrl.searchTextChange($ctrl.searchText)"
-          md-search-text="$ctrl.searchText"
-          md-selected-item-change="$ctrl.selectedItemChange(item)"
-          md-items="item in $ctrl.querySearch($ctrl.searchText)"
-          md-item-text="item.display"
-          md-min-length="0"
-          placeholder="Zoek gebruiker">
-          <md-item-template>
-            <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
-          </md-item-template>
-          <md-not-found>
-            "{{$ctrl.searchText}}" levert geen resultaten op.
-          </md-not-found>
-        </md-autocomplete>
-
+        <profile-search></profile-search>
 <!--
         <div>
           <md-button class="md-icon-button" ng-repeat="btn in $ctrl.buttons">
