--- a/src/app/auth/login-template.html
+++ b/src/app/auth/login-template.html
@@ -36,8 +36,7 @@
           <div layout="row">
             <md-button ng-click="$ctrl.logIn($ctrl.user)"
                        ng-disabled="loginForm.$invalid"
-                       class="md-primary md-raised"
-                       flex="100">
+                       class="md-primary md-raised">
               Login
             </md-button>
           </div>
