--- a/src/app/auth/login.scss
+++ b/src/app/auth/login.scss
@@ -22,6 +22,10 @@ html, body {
 
   }
 
+  button {
+    width: 100%;
+  }
+
   md-content {
     border-radius: $border-radius;
     padding: 15px;
