Convert to component

--- a/src/app/profile/components/milestone-details/milestone-details.html
+++ b/src/app/profile/components/milestone-details/milestone-details.html
@@ -1,9 +1,9 @@
 <md-card>
   <cardheader></cardheader>
   <div id="milestone">
-    
+    <p>Milestone</p>
   </div>
   <div id="comments">
-
+    <p>Comments</p>
   </div>
 </md-card>
