Add controller as

--- a/src/app/profile/components/milestone-details/milestone-details.html
+++ b/src/app/profile/components/milestone-details/milestone-details.html
@@ -1,5 +1,9 @@
 <md-card>
-  <cardheader></cardheader>
+  <card-header class="about-header"
+               buttons="about.actionButtons"
+               show-btn-edit="true"
+               show-btn-drag="true">
+  </card-header>
   <div id="milestone">
     <p>Milestone</p>
   </div>
