Fixed e2e tests and added e2e tests to login

--- a/src/app/auth/login-template.html
+++ b/src/app/auth/login-template.html
@@ -36,7 +36,8 @@
           <div layout="row">
             <md-button ng-click="$ctrl.logIn($ctrl.user)"
                        ng-disabled="loginForm.$invalid"
-                       class="md-primary md-raised">
+                       class="md-primary md-raised"
+                       id="login-btn">
               Login
             </md-button>
           </div>
