--- a/src/app/profile/components/milestone-details/milestone-details.html
+++ b/src/app/profile/components/milestone-details/milestone-details.html
@@ -4,20 +4,46 @@
                show-btn-edit="true"
                show-btn-drag="true">
   </card-header>
-  <div id="status">
-    <span>
+  <div id="milestone-details-wrap">
+    <div id="status">
       {{milestoneDetails.userFirstName}} {{milestoneDetails.userLastName}} -
       <span ng-if="milestoneDetails.status == 0" class="inProgress">In progress</span>
       <span ng-if="milestoneDetails.status == 1" class="accomplished">Accomplished</span>
       <span ng-if="milestoneDetails.status == 2" class="notAccomplished">Not accomplished</span>
-    </span>
+    </div>
+    <div id="milestone-details-header">
+      <div id="milestone-title">
+        {{milestoneDetails.title}}<br>
+        <span class="small-text">{{milestoneDetails.description}}</span>
+        <div>
+          <div ng-repeat="tag in milestoneDetails.tags" class="tag small-text">
+            {{tag}}
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="milestone-details">
+      <div id="milestone-details-dates">
+        <div class="detail">
+          <h4 class="details-title">Create date</h4>
+          <span>{{milestoneDetails.createDate}}</span>
+        </div>
+        <div class="detail">
+          <h4 class="details-title">Due date</h4>
+          <span>{{milestoneDetails.dueDate}}</span>
+        </div>
+        <div class="detail">
+          <h4 class="details-title">End date</h4>
+          <span>{{milestoneDetails.endDate}}</span>
+        </div>
+      </div>
+      <div class="detail">
+        <h4>More information</h4>
+        {{milestoneDetails.moreInformation}}
+      </div>
+    </div>
   </div>
-  <div>
-    <div id="milestone">
-      ...
-    </div>
-    <div id="comments">
-      ...
-    </div>
+  <div id="comments">
+    Comments
   </div>
 </md-card>
