--- a/src/app/auth/login-template.html
+++ b/src/app/auth/login-template.html
@@ -3,7 +3,7 @@
     <form id="login-form" name="loginForm" novalidate>
       <div layout="column">
         <md-content>
-          <img ng-src="../../assets/images/jworks-logo-nomargin.png" alt="JWorks">
+          <img ng-src="images/jworks-logo-nomargin.png" alt="JWorks">
           <md-input-container>
             <label>Username</label>
             <input required
