Implement error message on login fail

--- a/src/app/auth/login-template.html
+++ b/src/app/auth/login-template.html
@@ -41,6 +41,9 @@
               Login
             </md-button>
           </div>
+          <div id="login-error">
+            {{$ctrl.errorMessage}}
+          </div>
         </md-content>
       </div>
     </form>
