--- a/src/app/auth/login.scss
+++ b/src/app/auth/login.scss
@@ -1,3 +1,4 @@
+$red: #dd0000;
 $border-radius: 3px;
 
 html, body {
@@ -20,10 +21,9 @@ html, body {
 
   #login-form {
     #login-error {
-      background-color: blanchedalmond;
-      border: solid 1px black;
+      border: solid 1px $red;
       border-radius: 3px;
-      color: black;
+      color: $red;
       margin-left: 8px;
       margin-right: 8px;
       padding: 3px;
