--- a/src/app/profile/components/milestone-details/milestone-details.scss
+++ b/src/app/profile/components/milestone-details/milestone-details.scss
@@ -8,11 +8,10 @@ $green: #5bb75b;
 $red: #dd0000;
 
 #milestone-details-wrap {
-  border-bottom: solid 1px #eeeeee;
+  //border-bottom: solid 1px #eeeeee;
   padding: 10px;
 
   #status {
-    //display: inline-block;
     float: right;
     text-align: right;
 
@@ -33,8 +32,6 @@ $red: #dd0000;
     margin-bottom: 10px;
 
     #milestone-title {
-      //display: inline-block;
-      //float: left;
       font-size: 30px;
     }
   }
@@ -44,26 +41,29 @@ $red: #dd0000;
 
     #milestone-details-dates {
       & > .detail {
-        width: 100px;
+        width: 125px;
       }
     }
   }
 }
 
 #comments {
-  padding: 10px;
+  border-left: solid 1px #eeeeee;
+  padding: 10px 10px 0 10px;
+  position: relative;
+  width: 500px;
+
+  md-input-container {
+    bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    position: absolute;
+    width: 93%;
+  }
 }
 
 .small-text {
   font-size: 20px;
-}
-
-.tag {
-  background-color: $orange;
-  color: white;
-  display: inline-block;
-  margin-right: 5px;
-  padding: 5px;
 }
 
 .detail {
