Add comment balloons

--- a/src/app/profile/components/milestone-details/milestone-details.html
+++ b/src/app/profile/components/milestone-details/milestone-details.html
@@ -42,13 +42,43 @@
         </div>
       </div>
     </div>
-    <div id="comments">
-      <div>
-        <div>
-          [Comment 1]
+    <div id="comments-section">
+      <div id="comments">
+        <div class="balloon">
+          <div class="spike"></div>
+          <div class="comment">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
         </div>
-        <div>
-          [Comment 2]
+        <div class="balloon">
+          <div class="spike"></div>
+          <div class="comment">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+        <div class="balloon">
+          <div class="spike"></div>
+          <div class="comment">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+        <div class="balloon">
+          <div class="spike"></div>
+          <div class="comment">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+        <div class="balloon">
+          <div class="spike"></div>
+          <div class="comment">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+        <div class="balloon">
+          <div class="spike"></div>
+          <div class="comment">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
         </div>
       </div>
       <md-input-container>
