--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -1,4 +1,4 @@
-<md-toolbar id="toolbar">
+<md-toolbar id="toolbar" md-whiteframe="1">
   <div layout="row">
     <div class="logo" layout-align="start center"></div>
     <div id="welcome" layout="row" layout-align="start center">
