--- a/src/app/profile/profile-menu/profile-menu-template.html
+++ b/src/app/profile/profile-menu/profile-menu-template.html
@@ -1,5 +1,5 @@
 <md-content md-whiteframe="1">
   <md-tabs>
-    <md-tab ng-repeat="tab in $ctrl.tabs" label="{{tab.label}}"></md-tab>
+    <md-tab ng-repeat="tab in $ctrl.tabs" label="{{tab.label}}" md-on-select="$ctrl.onSelected(tab)"></md-tab>
   </md-tabs>
 </md-content>
