Updated button to work with component router

--- a/src/app/profile/milestones/timeline/milestone-styles.scss
+++ b/src/app/profile/milestones/timeline/milestone-styles.scss
@@ -106,6 +106,7 @@ milestone {
       p {
         transition: 500ms ease max-height;
         max-height: 100px;
+        word-break: break-all;
       }
       .fade-text {
         display: block;
