Add request milestone detail

--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -1,7 +1,7 @@
 <div layout="row" flex>
   <span flex="10"></span>
   <div layout="column" flex="60">
-    <milestone-details></milestone-details>
+    <milestone-details id="$ctrl.selectedId"></milestone-details>
     <md-card>
       <md-card-title>
         Comments
