--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -2,41 +2,7 @@
   <span flex="10"></span>
   <div layout="column" flex="60">
     <milestone-details></milestone-details>
-    <md-card>
-      <md-card-title>
-        Comments
-      </md-card-title>
-      <md-card-content>
-        <br/>
-        <br/>
-
-        <br/>
-
-        <br/>
-
-        <br/>
-
-        <br/>
-
-        <br/>
-        <br/>
-        <br/>
-
-        <br/>
-
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-      </md-card-content>
-    </md-card>
+    <milestone-comments></milestone-comments>
   </div>
   <md-card flex="40">
     <md-card-title>
