Add comments call & default padding all cards

--- a/src/app/profile/milestones/milestone-comments/milestone-comments.html
+++ b/src/app/profile/milestones/milestone-comments/milestone-comments.html
@@ -1,4 +1,4 @@
-<md-card id="comments">
+<md-card id="comments" class="boxPadding">
   <div id="commentsTitle">
     <strong>COMMENTS</strong>
   </div>
