--- a/src/app/profile/milestones/milestone-details/milestone-details.html
+++ b/src/app/profile/milestones/milestone-details/milestone-details.html
@@ -4,7 +4,7 @@
                show-btn-edit="true"
                show-btn-drag="true">
   </card-header>
-  <div layout="row">
+  <div layout="row" class="boxPadding">
     <div id="milestone-details-wrap" style="width: 100%;">
       <div id="status">
         {{milestoneDetails.userFirstName}} {{milestoneDetails.userLastName}} -
