--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,6 +19,10 @@ body {
   font-family: NeutraTextBook;
 }
 
+.boxPadding {
+  padding: 15px;
+}
+
 .alert-danger {
   color: #a94442;
   background-color: #f2dede;
