Remove session service from timelinecomponent Update MilestoneComponent to dumb component Update Milestonedetailspage

--- a/src/app/profile/milestones/milestone-comments/milestone-comments.html
+++ b/src/app/profile/milestones/milestone-comments/milestone-comments.html
@@ -14,10 +14,19 @@
       <div class="profilePicture"></div>
       <div class="comment">
         <div class="commentTitle">
-          <strong>{{milestoneComments.commentFirstName}} {{milestoneComments.commentLastName}}</strong> - <span class="commentTimestamp">{{milestoneComments.timestamp}}</span>
+          <strong>{{milestoneComments.commentFirstName}} {{milestoneComments.commentLastName}}</strong> - <span
+          class="commentTimestamp">{{milestoneComments.timestamp}}</span>
         </div>
         <div class="commentMessage">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis faucibus quam, non venenatis nibh sodales non. Nullam ultricies, neque quis venenatis porttitor, orci ipsum interdum enim, at porttitor lorem erat ac odio. Cras molestie felis non nibh cursus, nec efficitur dui sodales. Quisque bibendum urna magna, a mattis ante ornare in. Aenean pellentesque non ipsum nec luctus. Etiam id sem tristique, mattis mi vel, tempor ante. In dictum quam enim. Vivamus tristique varius mauris, vel auctor enim fermentum vel. Aenean vehicula aliquam velit a venenatis. Etiam enim ante, molestie ac bibendum sit amet, efficitur pretium felis. Ut dui nunc, mattis pellentesque efficitur ac, mattis in ipsum. Sed eget egestas ipsum. Maecenas eleifend, dolor non ullamcorper maximus, sapien odio pellentesque felis, sit amet pretium elit purus a sem. Nunc convallis auctor commodo. Nam molestie et est sed convallis. Morbi consequat arcu in nibh imperdiet maximus.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis faucibus quam, non venenatis nibh
+          sodales non. Nullam ultricies, neque quis venenatis porttitor, orci ipsum interdum enim, at porttitor lorem
+          erat ac odio. Cras molestie felis non nibh cursus, nec efficitur dui sodales. Quisque bibendum urna magna, a
+          mattis ante ornare in. Aenean pellentesque non ipsum nec luctus. Etiam id sem tristique, mattis mi vel, tempor
+          ante. In dictum quam enim. Vivamus tristique varius mauris, vel auctor enim fermentum vel. Aenean vehicula
+          aliquam velit a venenatis. Etiam enim ante, molestie ac bibendum sit amet, efficitur pretium felis. Ut dui
+          nunc, mattis pellentesque efficitur ac, mattis in ipsum. Sed eget egestas ipsum. Maecenas eleifend, dolor non
+          ullamcorper maximus, sapien odio pellentesque felis, sit amet pretium elit purus a sem. Nunc convallis auctor
+          commodo. Nam molestie et est sed convallis. Morbi consequat arcu in nibh imperdiet maximus.
         </div>
       </div>
       <div class="clear"></div>
