Added milestone list with async loading and routing

--- a/src/app/profile/milestones-details-page/milestone-details-page-template.html
+++ b/src/app/profile/milestones-details-page/milestone-details-page-template.html
@@ -38,39 +38,17 @@
       </md-card-content>
     </md-card>
   </div>
-  <md-card flex="40">
-    <md-card-title>
-      Milestone list
-    </md-card-title>
-    <md-card-content>
-      <br/>
-      <br/>
-
-      <br/>
-
-      <br/>
-
-      <br/>
-
-      <br/>
-
-      <br/>
-      <br/>
-      <br/>
-
-      <br/>
-
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
+  <md-card flex="40" id="milestone-list">
+    <card-header
+      show-btn-drag="true"
+      title="{{$ctrl.title}}">
+    </card-header>
+    <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.milestonesLoaded">
+      <md-progress-circular class="md-primary" md-mode="indeterminate" md-diameter="60"></md-progress-circular>
+    </div>
+    <md-card-content ng-if="$ctrl.milestonesLoaded">
+      <milestone-item milestone="mile" ng-repeat="mile in $ctrl.milestones">
+      </milestone-item>
     </md-card-content>
   </md-card>
   <span flex="10"></span>
