Add details page

--- a/src/app/profile/milestones-details-page/milestone-details-page-styles.scss
+++ b/src/app/profile/milestones-details-page/milestone-details-page-styles.scss
@@ -12,7 +12,7 @@ h3 {
     }
     &:hover {
       cursor: pointer;
-      background-color: rgba(0,0,0,0.05 );
+      background-color: rgba(0, 0, 0, 0.05);
     }
     .md-chips {
       box-shadow: none;
