--- a/src/app/profile/milestones/milestone-details/milestone-details.html
+++ b/src/app/profile/milestones/milestone-details/milestone-details.html
@@ -1,48 +1,45 @@
+<!--<card-header class="about-header"-->
+<!--buttons="about.actionButtons"-->
+<!--show-btn-edit="true"-->
+<!--show-btn-drag="true">-->
+<!--</card-header>-->
 <md-card>
-  <h1 ng-if="!milestoneDetails.milestone" layout="row" layout-align="center center">Please select a milestone</h1>
-  <div ng-if="milestoneDetails.milestone">
-    <card-header class="about-header"
-                 buttons="about.actionButtons"
-                 show-btn-edit="true"
-                 show-btn-drag="true">
-    </card-header>
+  <md-card-title>
+    <md-card-title-text>
+      <div id="status" ng-if="milestoneDetails.milestone">
+        <div layout="row" layout-align="end center">
+          <span ng-if="milestoneDetails.status == 0" class="inProgress md-caption">In progress</span>
+          <span ng-if="milestoneDetails.status == 1" class="accomplished md-caption">Accomplished</span>
+          <span ng-if="milestoneDetails.status == 2" class="notAccomplished md-caption">Not accomplished</span>
+        </div>
+        <p class="md-headline no-top-margin no-bottom-margin">{{milestoneDetails.title}}</p>
+      </div>
+      <span class="md-headline" ng-if="!milestoneDetails.milestone">Please select a milestone</span>
+    </md-card-title-text>
+  </md-card-title>
+  <md-card-content ng-if="milestoneDetails.milestone">
+    <div>
+      <span class="md-subhead"><strong>Description</strong></span>
+      <p class="gray no-top-margin">{{milestoneDetails.description}}</p>
+    </div>
+    <div>
+      <span class="md-subhead"><strong>More information</strong></span>
+      <p class="gray no-top-margin">{{milestoneDetails.moreInformation}}</p>
+    </div>
     <div layout="row">
-      <div id="milestone-details-wrap" style="width: 100%;">
-        <div id="status">
-          <span ng-if="milestoneDetails.status == 0" class="inProgress">In progress</span>
-          <span ng-if="milestoneDetails.status == 1" class="accomplished">Accomplished</span>
-          <span ng-if="milestoneDetails.status == 2" class="notAccomplished">Not accomplished</span>
-        </div>
-        <div id="milestone-details-header">
-          <div id="milestone-title">
-            {{milestoneDetails.title}}<br>
-            <span class="small-text">{{milestoneDetails.description}}</span>
-            <div>
-              <md-chips readonly="true" ng-model="milestoneDetails.tags"></md-chips>
-            </div>
-          </div>
-        </div>
-        <div id="milestone-details">
-          <div id="milestone-details-dates">
-            <div class="detail">
-              <h4 class="details-title">Create date</h4>
-              <span>{{milestoneDetails.createDate}}</span>
-            </div>
-            <div class="detail">
-              <h4 class="details-title">Due date</h4>
-              <span>{{milestoneDetails.dueDate}}</span>
-            </div>
-            <div class="detail" ng-if="milestoneDetails.endDate">
-              <h4 class="details-title">End date</h4>
-              <span>{{milestoneDetails.endDate}}</span>
-            </div>
-          </div>
-          <div class="detail">
-            <h4>More information</h4>
-            <p>{{milestoneDetails.moreInformation}}</p>
-          </div>
-        </div>
+      <div class="detail">
+        <span class="md-body-2 accent-color"><strong>Create date</strong></span>
+        <p class="no-top-margin">{{milestoneDetails.createDate}}</p>
+      </div>
+      <div class="detail">
+        <span class="md-body-2 accent-color"><strong>Due date</strong></span>
+        <p class="no-top-margin">{{milestoneDetails.dueDate}}</p>
+      </div>
+      <div class="detail" ng-if="milestoneDetails.endDate">
+        <span class="md-body-2 accent-color"><strong>End date</strong></span>
+        <p class="no-top-margin">{{milestoneDetails.endDate}}</p>
       </div>
     </div>
-  </div>
+    <md-chips readonly="true" ng-model="milestoneDetails.tags"></md-chips>
+  </md-card-content>
 </md-card>
