Add milestone-comments and list material design styling

--- a/src/app/profile/milestones-details-page/milestone-details-page-styles.scss
+++ b/src/app/profile/milestones-details-page/milestone-details-page-styles.scss
@@ -3,6 +3,9 @@ h3 {
   margin-bottom: 8px;
 }
 
+.milestone-selected {
+  color: #1c94c4;
+}
 #milestone-list {
   md-card {
     position: relative;
