--- a/src/app/profile/milestones/milestone-list/MilestoneItem-template.html
+++ b/src/app/profile/milestones/milestone-list/MilestoneItem-template.html
@@ -1,12 +1,8 @@
-<md-card flex ng-click="$ctrl.gotoMilestoneDetail()">
-  <md-card-title>
-    <md-card-title-text>
-      <span class="md-headline">{{$ctrl.milestone.objective.title}}</span>
-    </md-card-title-text>
-  </md-card-title>
-  <md-card-content>
-    <p>{{$ctrl.milestone.objective.description}}</p>
-    <md-chips readonly="true" ng-model="$ctrl.milestone.objective.tags">
-    </md-chips>
-  </md-card-content>
-</md-card>
+<md-list-item ng-click="$ctrl.gotoMilestoneDetail()">
+  <div layout="column">
+    <span class="md-subhead">{{$ctrl.milestone.objective.title}} </span>
+    <!--<p>{{$ctrl.milestone.objective.description}}</p>-->
+    <!--<md-chips readonly="true" ng-model="$ctrl.milestone.objective.tags">-->
+    <!--</md-chips>-->
+  </div>
+</md-list-item>
